--- a/docs/reference-guide/modules/commands/pages/command-dispatchers.adoc
+++ b/docs/reference-guide/modules/commands/pages/command-dispatchers.adoc
@@ -342,7 +342,7 @@ public record IssueCardCommand(String cardId, int amount, String shopId) {
 In this example, the `cardId` property will be extracted and used as the routing key.
 
 The framework will automatically extract the value from the specified property (field or method) and use it as the routing key when dispatching the command.
-If a method name is provided, it can be the actual method name (e.g., `getCardId`) or the property name (e.g., `cardId`).
+If a method name is provided, it can be the actual method name (`getCardId`) or the property name (`cardId`).
 When using the property name for a method, the framework resolves it by looking for methods starting with `get`, `is`, or matching the name exactly.
 
 [NOTE]
