--- a/docs/reference-guide/modules/commands/pages/modeling/aggregate-polymorphism.adoc
+++ b/docs/reference-guide/modules/commands/pages/modeling/aggregate-polymorphism.adoc
@@ -36,28 +36,22 @@ and `@AggregateVersion` annotated fields.
 
 == Registering aggregate subtypes
 
-A polymorphic aggregate hierarchy can be registered via the `AggregateConfigurer` by invoking
-`AggregateConfigurer#withSubtypes(Set<Class<? extends A>>)`.
-
-Do note that children of the parent aggregate that you do not register as a subtype will be *automatically*
-registered by the framework as a subtype.
-So, in the following example, the `ClosedLoopGiftCard` is transitively registered as a subtype of `GiftCard`.
-However, if there is a `LimitedRechargeableGiftCard extends RechargeableGiftCard` defined, the framework will not pick it up *automatically* since it is not a direct child of the parent aggregate.
+A polymorphic aggregate hierarchy can be registered via the `EventSourcingConfigurer`.
 
 [source,java]
 ----
 public class AxonConfig {
     // omitting other configuration methods...
-    public AggregateConfigurer<GiftCard> giftCardConfigurer() {
-        Set<Class<? extends GiftCard>> subtypes = new HashSet<>();
-        subtypes.add(OpenLoopGiftCard.class);
-        subtypes.add(RechargeableGiftCard.class);
-
-        return AggregateConfigurer.defaultConfiguration(GiftCard.class)
-                                  .withSubtypes(subtypes);
+    public void configure(EventSourcingConfigurer configurer) {
+        configurer.registerEntity(
+            EventSourcedEntityModule.declarative(String.class, GiftCard.class)
+                                    .messagingModel(PolymorphicEntityMetamodel.forSuperType(GiftCard.class)
+                                                                              .addConcreteType(AnnotatedEntityMetamodel.forType(OpenLoopGiftCard.class))
+                                                                              .addConcreteType(AnnotatedEntityMetamodel.forType(RechargeableGiftCard.class))
+                                                                              .build())
+                                    // other phases (factory, etc.) omitted for brevity
+        );
     }
-
-    // ...
 }
 
 class GiftCard {
@@ -73,9 +67,29 @@ class RechargeableGiftCard extends GiftCard {
 }
 ----
 
-[TIP]
-.Polymorphic Aggregates in Spring
-====
-If you are using Spring, Axon will automatically detect polymorphic aggregates based on the `@Aggregate` annotations and class hierarchy.
-The `@Aggregate` annotation needs to be put on the shared parent class that contains the aggregate identifier, as well as every subclass that is a potential instance type of that shared parent class.
-====
+== Polymorphic aggregates in spring boot
+
+If you are using Spring, Axon will automatically detect polymorphic aggregates based on the `@EventSourced` annotations and class hierarchy.
+The `@EventSourced` annotation needs to be put on the shared parent class that contains the aggregate identifier, as well as every subclass that is a potential instance type of that shared parent class.
+
+[source,java]
+----
+@EventSourced(concreteTypes = {OpenLoopGiftCard.class, RechargeableGiftCard.class})
+public abstract class GiftCard {
+
+    @EntityId
+    protected String cardId;
+
+    // ...
+}
+
+@EventSourced
+public class OpenLoopGiftCard extends GiftCard {
+    // ...
+}
+
+@EventSourced
+public class RechargeableGiftCard extends GiftCard {
+    // ...
+}
+----
