--- a/docs/reference-guide/modules/migration/pages/paths/index.adoc
+++ b/docs/reference-guide/modules/migration/pages/paths/index.adoc
@@ -10,8 +10,8 @@ Whether you are performing a straightforward version bump or a deep architectura
 * Import and Package Changes
 * Module Restructuring
 2. **Specific Migration Paths**
+* xref:migration:paths/aggregates/index.adoc[Aggregate Migration]
 * xref:migration:paths/messages.adoc[Message Migration (@Event, @Command, @Query)]
-* xref:migration:paths/aggregates.adoc[Aggregate Migration]
 * _Event Processor configuration in Axon Framework 5 (Coming soon)_
 * _Test fixtures (Coming soon)_
 * _Serializer to Converter configuration changes (Coming soon)_
