Add a nudge for the examples packages
Add a nudge for the examples packages

--- a/docs/af5-getting-started/modules/ROOT/pages/index.adoc
+++ b/docs/af5-getting-started/modules/ROOT/pages/index.adoc
@@ -37,6 +37,14 @@ You can either:
 * Check out our link:https://github.com/AxonIQ/university-demo/[Axon University Demo repository on GitHub,role=external,window=_blank] for the complete code
 
 
+[TIP]
+.More examples?
+====
+Looking for more examples?
+Axon Framework includes several example projects in its repository that demonstrate different patterns, features, and use cases.
+Browse the link:https://github.com/AxonFramework/AxonFramework/tree/main/examples[examples directory on GitHub,role=external,window=_blank] to explore these projects and see Axon Framework in action.
+====
+
 == Your feedback matters!
 
 Keep in mind that Axon Framework 5 is currently in a milestone version, so it may be subject to change.
