Address PR review comments for MultiStreamableEventSource
  - Make SOURCE_ID_RESOURCE public for comparator access
  - Update @since tags to 5.1.0 and add Greg Woods as co-author
  - Add null checks to MergedMessageStream constructor
  - Fix JavaDoc references to use proper {@link} syntax
  - Apply pattern matching for instanceof checks
  - Re-enable MultiSourceTrackingToken tests
  - Update documentation with AF5 configuration API

--- a/docs/reference-guide/modules/events/pages/event-processors/streaming.adoc
+++ b/docs/reference-guide/modules/events/pages/event-processors/streaming.adoc
@@ -1683,7 +1683,7 @@ public class AxonConfig {
 }
 ----
 
-Assuming a `buildMultiStreamableEventSource(...)` method is present, we can use the outcome to register a processor with the configuring `EventProcessingConfigurer`:
+Assuming a `buildMultiStreamableEventSource(...)` method is present, we can use the outcome to register a processor with the `PooledStreamingEventProcessorsConfigurer`:
 
 [tabs]
 ====
@@ -1695,9 +1695,15 @@ Configuration API::
 ----
 public class AxonConfig {
     // omitting other configuration methods...
-    public void configurePooledStreamingProcessor(EventProcessingConfigurer processingConfigurer) {
-        processingConfigurer.registerPooledStreamingEventProcessor(
-                "example-processor", config -> buildMultiStreamableEventSource(/*...*/)
+    private PooledStreamingEventProcessorsConfigurer configurePooledStreamingProcessor(
+            PooledStreamingEventProcessorsConfigurer pooledStreamingConfigurer
+    ) {
+        return pooledStreamingConfigurer.processor(
+                "example-processor",
+                config -> config.eventHandlingComponents(this::configureHandlingComponent)
+                                .customize((c, pooledStreamingConfig) -> pooledStreamingConfig
+                                        .eventSource(buildMultiStreamableEventSource(/*...*/))
+                                )
         );
     }
 }
