--- a/docs/reference-guide/modules/migration/pages/paths/aggregates/multi-entity-migration.adoc
+++ b/docs/reference-guide/modules/migration/pages/paths/aggregates/multi-entity-migration.adoc
@@ -47,7 +47,6 @@ public class Transaction {
     private String transactionId; // <3>
     private int amount;
 
-    @EntityCreator // <4>
     public Transaction(String transactionId, int amount) {
         this.transactionId = transactionId;
         this.amount = amount;
@@ -57,7 +56,6 @@ public class Transaction {
 <1> `@EntityMember` replaces `@AggregateMember`.
 <2> The pattern for managing child entities in `@EventSourcingHandler` remains the same.
 <3> No specific annotation is required on the field if it's managed via the constructor or sourcing handlers.
-<4> `@EntityCreator` is also recommended for child entities to clarify how they are instantiated.
 
 Axon Framework 4::
 +
@@ -103,14 +101,12 @@ public class Transaction {
 
 ====
 
+
+
 [IMPORTANT]
-.Only lists are supported
+.Maps are not supported
 ====
 `@AggregateMember` could be used on `Map<Key,Value>` fields to represent child entities identified by a key.
 
 The `@EntityMember` annotation in Axon Framework 5 supports `List<Value>` only. If you need to model child entities identified by a key, consider using a `List<Value>` and managing the identification logic within the entity itself or through a custom resolver.
 ====
-
-
-
-
