--- a/docs/reference-guide/modules/migration/pages/paths/aggregates/polymorphism-migration.adoc
+++ b/docs/reference-guide/modules/migration/pages/paths/aggregates/polymorphism-migration.adoc
@@ -23,8 +23,69 @@ In Axon Framework 5, you register the hierarchy through the `EventSourcingConfig
 
 [tabs]
 ====
+Axon Framework 5 (Declarative)::
++
+--
+[source,java]
+----
+public class AxonConfig {
+    // ...
+    public void configure(EventSourcingConfigurer configurer) {
+         configurer.registerEntity(
+                EventSourcedEntityModule.declarative(String.class, GiftCard.class)
+                        .messagingModel((configuration, builder) -> PolymorphicEntityMetamodel.forSuperType(GiftCard.class)
+                                .addConcreteType(AnnotatedEntityMetamodel.forConcreteType(
+                                        OpenLoopGiftCard.class,
+                                        configuration.getComponent(ParameterResolverFactory.class),
+                                        configuration.getComponent(MessageTypeResolver.class),
+                                        configuration.getComponent(MessageConverter.class),
+                                        configuration.getComponent(EventConverter.class)
+                                ))
+                                .addConcreteType(AnnotatedEntityMetamodel.forConcreteType(
+                                        RechargeableGiftCard.class,
+                                        configuration.getComponent(ParameterResolverFactory.class),
+                                        configuration.getComponent(MessageTypeResolver.class),
+                                        configuration.getComponent(MessageConverter.class),
+                                        configuration.getComponent(EventConverter.class)
+                                ))
+                                .build())
+        );
+                                    // other phases (factory, etc.) omitted for brevity
+    }
+}
+----
+--
+
+Axon Framework 5 (AutoDetected)::
++
+--
+In most cases, you can rely on auto-detection of polymorphic entities by Axon Framework 5. Simply register the base type, and the framework will discover the subtypes automatically.
+[source,java]
+----
+@EventSourcedEntity(
+    concreteTypes = {
+            OpenLoopGiftCard.class,
+            RechargeableGiftCard.class
+    }
+)
+public class GiftCard extends Card {
+    // ...
+}
+
+public class AxonConfig {
+    // ...
+    public void configure(EventSourcingConfigurer configurer) {
+        configurer.registerEntity(
+                EventSourcedEntityModule.autodetected(String.class, GiftCard.class)
+        );
+    }
+}
+----
+--
+
 Axon Framework 4::
 +
+--
 [source,java]
 ----
 public class AxonConfig {
@@ -42,21 +103,6 @@ public class AxonConfig {
     }
 }
 ----
+--
 
-Axon Framework 5::
-+
-[source,java]
-----
-public class AxonConfig {
-    // ...
-    public void configure(EventSourcingConfigurer configurer) {
-        configurer.registerEntity(
-            EventSourcedEntityModule.declarative(String.class, GiftCard.class)
-                                    .messagingModel(PolymorphicEntityMetamodel.forSuperType(GiftCard.class)
-                                                                              .addConcreteType(AnnotatedEntityMetamodel.forType(OpenLoopGiftCard.class))
-                                                                              .addConcreteType(AnnotatedEntityMetamodel.forType(RechargeableGiftCard.class))
-                                                                              .build())
-                                    // other phases (factory, etc.) omitted for brevity
-        );
 ====
-
