documentation(4084): introduce projectors and event-processing
#4084

--- a/docs/reference-guide/modules/migration/partials/nav.adoc
+++ b/docs/reference-guide/modules/migration/partials/nav.adoc
@@ -10,3 +10,4 @@
 **** xref:migration:paths/aggregates/polymorphism-migration.adoc[]
 **** xref:migration:paths/aggregates/multi-entity-migration.adoc[]
 *** xref:migration:paths/messages.adoc[]
+*** xref:migration:paths/projectors-event-processors.adoc[]
